include/bitstream.h

/* forward declaration of opaque type */
typedef struct bitstream bitstream;
/* allocate and initialize bit stream */
bitstream* stream_open(void* buffer, size_t bytes);
/* close and deallocate bit stream */
void stream_close(bitstream* stream);